Fix hero section failing to vertically fill the viewport. Fix alignment issues with the hero section and the sticky header. Simplify hero section js/css. Fix services template, avoiding rendering of content div if there is no content.

--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -250,14 +250,14 @@ img {
 }
 
 .hero-section .fh5co-copy {
-  display: table;
+  height: 100%;
   width: 100%;
 }
 
 .hero-section .fh5co-copy-inner {
-  display: table-cell;
-  vertical-align: middle;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .hero-section .fh5co-copy-inner h1,
